--- a/FitLogGo/src/FitLogGo/Views/Shared/_Layout.cshtml
+++ b/FitLogGo/src/FitLogGo/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-controller="Sessions" asp-action="Index">Sessions</a></li>
+                    <li><a asp-controller="Sessions" asp-action="Create">New Session</a></li>
                 </ul>
             </div>
         </div>
