--- a/FitLogGo/src/FitLogGo/Views/Home/About.cshtml
+++ b/FitLogGo/src/FitLogGo/Views/Home/About.cshtml
@@ -4,4 +4,32 @@
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
+
+@*<script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+          ['Eat',      2],
+          ['Commute',  2],
+          ['Watch TV', 2],
+          ['Sleep',    7]
+        ]);
+
+        var options = {
+          title: 'My Daily Activities'
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+        chart.draw(data, options);
+      }
+</script>*@
+
+
 <p>Use this area to provide additional information.</p>
+Show chart here. The data is coming from the viewdata instead of an ajax call.
+@*<div id="piechart" style="width: 900px; height: 500px;"></div>*@
