--- a/FitLogGo/src/FitLogGo/Views/Shared/_Layout.cshtml
+++ b/FitLogGo/src/FitLogGo/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FitLogGo</title>
+    <title>@ViewData["Title"] - FitLog</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -15,6 +15,12 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+
+
+
+    @*<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>*@
+    
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -26,13 +32,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-controller="Home" asp-action="Index" class="navbar-brand">FitLogGo</a>
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand">FitLog</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-controller="Sessions" asp-action="Index">Sessions</a></li>
                     <li><a asp-controller="Sessions" asp-action="Create">New Session</a></li>
+                    <li><a asp-controller="GoogleChart" asp-action="Column">Column Chart</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +48,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - FitLogGo</p>
+            <p>&copy; 2016 - FitLog</p>
         </footer>
     </div>
 
